Feat/investment product images tar 797 (#610)
* TAR-797: BE: use new portfolio product properties and deprecate an old one

- Define all Product portfolio properties; new product setup, insert & update; fix CHANGELOG.md;
- ingest product portfolio image icons; improve code definition; improve logging info.
- upgrade investment-service version to 1.6.2
- fix tests; add code coverage; add tests
- set product external id

---------

Co-authored-by: Roman Kniazevych <romank@backbase.com>
Co-authored-by: Cursor <cursoragent@cursor.com>